---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: ???
  Features:
    - Added total request count to tooltips of 'Request' result groups
    - Added total signal value to tooltips of 'Signal' result groups
  Bugfixes:
    - Fixed some furnaces not being found in 'Product' searches
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 25 April 2022
  Features:
    - Added recipes used to tooltips of 'Product' result groups
    - Added total item/fluid count to tooltips of 'Storage' result groups
    - Clearing search (with right-click) now clears results
  Changes:
    - Decreased highlight box duration from 20s to 12s
  Bugfixes:
    - Fixed crash when 'Signal' search mode encounters a modded constant combinator with `item_slot_count = 0` (no signal slots)
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 17 April 2022
  Bugfixes:
    - Fixed crash when selecting 'Unknown signal' in 'Signal' search mode or with certain other mods (e.g. Miniloaders)
  Locale:
    - Added complete Russion translations (thanks Shadow_Man on Crowdin!)
    - Added complete Korean translations (thanks x2605 on Crowdin!)
    - Added some Swedish translations (thanks Fewlike on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 8 April 2022
  Features:
    - 'Control + Shift + Click' on any ingame object (e.g. an item in your inventory) to open it in Factory Search
    - Added 'Request' search option to search for logistic containers requesting the item
    - Added scroll bar that appears when the search results are too long to fit on the screen
  Changes:
    - Changed search option names to be more consistent